[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Python backend"
authors = ["Example <example@example.com>"]
packages = [{include = "app_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
pydantic = "^1.10"
loguru = "^0.7"
bybit_p2p = "*"
requests = "^2.31"
requests-toolbelt = "^1.0"
pycryptodome = "^3.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
